Bug 49664 - pa_modargs_get_sample_spec_and_channel_map() should not fail when only a "channel_map" argument is given.
Summary: pa_modargs_get_sample_spec_and_channel_map() should not fail when only a "cha...
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-08 19:51 UTC by Tanu Kaskinen
Modified: 2013-01-29 03:55 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Tanu Kaskinen 2012-05-08 19:51:20 UTC
This fails:
pactl load-module module-null-sink channel_map=aux0,aux1,aux2,aux3

Thid doesn't fail:
pactl load-module module-null-sink channel_map=aux0,aux1,aux2,aux3 channels=4

Both should succeed. In the first case it's obvious that the intended amount of channels is 4. The problem is that pa_modargs_get_sample_spec_and_channel_map() fails if "channels" is not given and the default sample spec channels don't match the given channel map. pa_modargs_get_sample_spec_and_channel_map() needs to be smarter than that.
Comment 1 Tanu Kaskinen 2012-05-08 20:21:30 UTC
Patch sent to the mailing list: http://thread.gmane.org/gmane.comp.audio.pulseaudio.general/13205


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.