modargs: Don't fail needlessly in pa_modargs_get_sample_spec_and_channel_map().

BugLink: https://bugs.freedesktop.org/show_bug.cgi?id=49664